<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omniwheel</name>
  <version>1.0.0</version>
  <description>Omni-Wheel Robot ROS2 Control Package</description>
  <maintainer email="user@example.com">Omniwheel User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ±âÁ¸ ÀÇÁ¸¼º -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- omnibridge.py¸¦ À§ÇÑ Ãß°¡ ÀÇÁ¸¼º -->
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Python ÆÐÅ°Áö -->
  <exec_depend>python3-serial</exec_depend>

  <!-- Å×½ºÆ® ÀÇÁ¸¼º -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
